--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "form-spine",
   "version": "0.5.3",
   "description": "A lightweight form class with error handling, validation, and ajax requests (using fetch)",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/LasseRafn/form-spine.git"
