--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
 		"prepublish": "npm run -s build",
 		"clean": "rimraf dist && mkdirp dist",
 		"release": "npm run -s build && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish",
-		"minify:cjs": "uglifyjs $npm_package_main -cm toplevel -o $npm_package_main -p"
+		"minify:cjs": "uglifyjs $npm_package_main -cm toplevel -o $npm_package_main -p",
+		"rollup:cjs": "cross-env FORMAT=cjs rollup -c rollup.config.js -f cjs -n $npm_package_name -o $npm_package_main"
 	},
 	"eslintConfig": {
 		"parser": "babel-eslint",
@@ -54,6 +55,9 @@
 		"gzip-size-cli": "^1.0.0",
 		"strip-json-comments-cli": "^1.0.1",
 		"mkdirp": "^0.5.1",
+		"rollup": "^0.41.4",
+		"rollup-plugin-buble": "^0.15.0",
+		"rollup-plugin-post-replace": "^1.0.0",
 		"rimraf": "^2.5.2",
 		"uglify-js": "^2.6.2"
 	}
