--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"size": "echo \"Gzipped Size: $(strip-json-comments --no-whitespace $npm_package_main | gzip-size)\"",
 		"prepublish": "npm run -s build",
 		"clean": "rimraf dist && mkdirp dist",
-		"release": "npm run build -s && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish",
+		"release": "git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish",
 		"minify:cjs": "uglifyjs $npm_package_main -cm toplevel -o $npm_package_main -p",
 		"rollup:cjs": "cross-env FORMAT=cjs rollup -c rollup.config.js -f cjs -n $npm_package_name -o $npm_package_main"
 	},
