--- a/package.json
+++ b/package.json
@@ -24,11 +24,10 @@
 	},
 	"scripts": {
 		"lint": "eslint src test",
-		"build": "npm-run-all --silent clean -p rollup:* -p minify:* -s size",
+		"build": "npm-run-all --silent rollup:* -p minify:* -s size",
 		"size": "echo \"Gzipped Size: $(strip-json-comments --no-whitespace $npm_package_main | gzip-size)\"",
 		"prepublish": "npm run -s build",
-		"clean": "rimraf dist && mkdirp dist",
-		"release": "git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags ",
+		"release": "npm run -s build && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish",
 		"minify:cjs": "uglifyjs $npm_package_main -cm toplevel -o $npm_package_main -p",
 		"rollup:cjs": "cross-env FORMAT=cjs rollup -c rollup.config.js -f cjs -n $npm_package_name -o $npm_package_main"
 	},
