--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
 	"name": "form-spine",
 	"version": "0.6.16",
 	"description": "A lightweight form class with error handling, validation, and ajax requests (using fetch)",
-	"main": "index.js",
+	"main": "dist/formspine.js",
+	"module": "dist/formspine.es.js",
+	"jsnext:main": "dist/formspine.es.js",
+	"umd:main": "dist/formspine.umd.js",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/LasseRafn/form-spine.git"
@@ -22,14 +25,23 @@
 	"dependencies": {
 		"unfetch": "^2.1.2"
 	},
+	"files": [
+		"src",
+		"dist",
+		"index.js"
+	],
 	"scripts": {
-		"lint": "eslint src test",
-		"build": "npm-run-all --silent rollup:* -p minify:* -s size",
+		"lint": "eslint index.js",
+		"build": "npm-run-all --silent clean -p rollup:* -p minify:* -s size",
 		"size": "echo \"Gzipped Size: $(strip-json-comments --no-whitespace $npm_package_main | gzip-size)\"",
 		"prepublish": "npm run -s build",
+		"clean": "rimraf dist && mkdirp dist",
 		"release": "npm run -s build && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish",
-		"minify:cjs": "uglifyjs $npm_package_main -cm toplevel -o $npm_package_main -p",
-		"rollup:cjs": "cross-env FORMAT=cjs rollup -c rollup.config.js -f cjs -n $npm_package_name -o $npm_package_main"
+		"minify:cjs": "uglifyjs $npm_package_main -cm toplevel -o $npm_package_main -p relative --in-source-map ${npm_package_main}.map --source-map ${npm_package_main}.map",
+		"minify:umd": "uglifyjs $npm_package_umd_main -cm -o $npm_package_umd_main -p relative --in-source-map ${npm_package_umd_main}.map --source-map ${npm_package_umd_main}.map",
+		"rollup:cjs": "cross-env FORMAT=cjs rollup -c rollup.config.js -f cjs -n $npm_package_name -o $npm_package_main",
+		"rollup:umd": "cross-env FORMAT=umd rollup -c rollup.config.js -f umd -n $npm_package_name -o $npm_package_umd_main",
+		"rollup:esm": "rollup -c rollup.config.js -f es -n $npm_package_name -o $npm_package_module"
 	},
 	"eslintConfig": {
 		"parser": "babel-eslint",
@@ -53,11 +65,9 @@
 		"npm-run-all": "^2.1.1",
 		"gzip-size-cli": "^1.0.0",
 		"strip-json-comments-cli": "^1.0.1",
-		"mkdirp": "^0.5.1",
 		"rollup": "^0.41.4",
 		"rollup-plugin-buble": "^0.15.0",
 		"rollup-plugin-post-replace": "^1.0.0",
-		"rimraf": "^2.5.2",
 		"uglify-js": "^2.6.2",
 		"cross-env": "^3.1.4"
 	}
