--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "form-spine",
-	"version": "0.8.6",
+	"version": "0.8.9",
 	"description": "A lightweight form class with error handling, validation, and ajax requests (using fetch)",
 	"main": "dist/formspine.js",
 	"module": "dist/formspine.es.js",
@@ -65,21 +65,17 @@
 		"babel-preset-es2015": "^6.9.0",
 		"babel-preset-stage-0": "^6.5.0",
 		"babel-register": "^6.24.0",
-		"browser-env": "^2.0.25",
-		"chai": "^3.5.0",
-		"chai-as-promised": "^6.0.0",
 		"cross-env": "^3.1.4",
 		"eslint": "^3.13.1",
 		"gzip-size-cli": "^1.0.0",
 		"mkdirp": "^0.5.1",
-		"mocha": "^3.2.0",
 		"npm-run-all": "^2.1.1",
+		"nyc": "^10.1.2",
 		"rimraf": "^2.6.1",
 		"rollup": "^0.41.4",
 		"rollup-plugin-buble": "^0.15.0",
 		"rollup-plugin-post-replace": "^1.0.0",
 		"sinon": "^2.0.0",
-		"sinon-chai": "^2.8.0",
 		"strip-json-comments-cli": "^1.0.1",
 		"uglify-js": "^2.6.2"
 	}
