--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "form-spine",
-	"version": "0.9.5",
+	"version": "0.9.6",
 	"description": "A lightweight form class with error handling, validation, and ajax requests (using fetch)",
 	"main": "dist/formspine.js",
 	"module": "dist/formspine.es.js",
@@ -35,7 +35,7 @@
 		"lint": "eslint index.js",
 		"build": "node index-builder.js && npm-run-all --silent clean -p rollup:* -p minify:* -s size",
 		"size": "echo \"Gzipped Size: $(strip-json-comments --no-whitespace $npm_package_main | gzip-size)\"",
-		"prepublish": "npm run -s build",
+		"prepublish": "npm run -s build && npm run test && npm run lint",
 		"test": "node test/create-test-file.js && nyc --check-coverage --lines 95 ava test/test.js && rimraf console-test.js",
 		"coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
 		"clean": "rimraf dist && mkdirp dist",
