--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
 		"build": "node index-builder.js && npm-run-all --silent clean -p rollup:* -p minify:* -s size",
 		"size": "echo \"Gzipped Size: $(strip-json-comments --no-whitespace $npm_package_main | gzip-size)\"",
 		"prepublish": "npm run -s build && npm run test && npm run lint",
-		"test": "node test/create-test-file.js && nyc --check-coverage --lines 95 ava test/test.js && rimraf console-test.js",
-		"coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov && rimraf console-test.js",
+		"test": "node test/create-test-file.js && nyc --check-coverage --lines 95 ava test/test.js",
+		"coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
 		"clean": "rimraf dist && mkdirp dist",
 		"release": "npm run -s build && git commit -am $npm_package_version && git tag $npm_package_version && git push origin master && git push --tags && npm publish",
 		"minify:cjs": "uglifyjs $npm_package_main -cm toplevel -o $npm_package_main -p relative --in-source-map ${npm_package_main}.map --source-map ${npm_package_main}.map",
