--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"build": "node index-builder.js && npm-run-all --silent clean -p rollup:* -p minify:* -s size",
 		"size": "echo \"Gzipped Size: $(strip-json-comments --no-whitespace $npm_package_main | gzip-size) bytes \"",
 		"prepublish": "npm run test && npm run lint",
-		"test": "node test/create-test-file.js && nyc --check-coverage --lines 95 ava test/test.js",
+		"test": "nyc --check-coverage --lines 95 ava test/test.js",
 		"coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
 		"clean": "rimraf dist && mkdirp dist",
 		"release": "npm run -s build && git commit -am $npm_package_version && git tag $npm_package_version && git push origin master && git push --tags && npm publish",
